fixed image align

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -365,18 +365,16 @@ span.p-disable > p {
         }
         img {
             border: 2px solid $rblue;
-            &:nth-child(even) {
-                float: left;
-                margin-right: 1rem;
-                margin-top: 1rem;
-                margin-bottom: 1rem;
-            }
-            &:nth-child(odd) {
-                float: right;
-                margin-left: 1rem;
-                margin-top: 1rem;
-                margin-bottom: 1rem;
-            }
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+        p:nth-child(even) img {
+            float: left;
+            margin-right: 1rem;
+        }
+        p:nth-child(odd) img {
+            float: right;
+            margin-left: 1rem;
         }
     }
 }
